adjust windows package to JDK 21