@@ -1,14 +1,14 @@
 package org.cryptomator.jfuse.win;
 
 import org.cryptomator.jfuse.api.Statvfs;
-import org.cryptomator.jfuse.win.extr.fuse_statvfs;
+import org.cryptomator.jfuse.win.extr.fuse3.fuse_statvfs;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 
 record StatvfsImpl(MemorySegment segment) implements Statvfs {
 
-	public StatvfsImpl(MemorySegment address, SegmentScope scope) {
+	public StatvfsImpl(MemorySegment address, Arena scope) {
 		this(fuse_statvfs.ofAddress(address, scope));
 	}
 
